--- a/nginx.conf
+++ b/nginx.conf
@@ -9,8 +9,12 @@ server{
         try_files $uri $uri/ /index.html;
     }
 
+
+    location /static/profiles/{
+        root /usr/share/nginx/html;
+    }
     location /api/ {  # 클라이언트(브라우저 등)에서 http://내서버/api/ 로 시작하는 요청이 들어오면
-        proxy_pass http://api_gateway:8000;  # /api/ 로 들어온 요청을 api_gateway라는 다른 서버(컨테이너)의 8000번 포트로 넘긴다
+        proxy_pass http://api_gateway:8001;  # /api/ 로 들어온 요청을 api_gateway라는 다른 서버(컨테이너)의 8080번 포트로 넘긴다
                                             # 즉, Nginx가 프록시 역할을 해서 /api/ 관련 요청은 뒤에 있는 api_gateway 서버가 처리하도록 위임하는 것
         # 아래는 프록시(중계)할 때, 클라이언트가 보낸 원래 요청 정보를 뒤에 있는 서버에게도 전달하기 위한 설정
         proxy_set_header Host $host; # 원래 요청된 호스트 이름(도메인) 을 넘김
